argocd-apps/nginx-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-demo
  labels:
    name: nginx-demo
