argocd-apps/nginx-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: nginx-demo
  labels:
    app: nginx-demo
spec:
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
