argocd-apps/nginx-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: nginx-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: "demo.virington.com"
    external-dns.alpha.kubernetes.io/target: "172.21.252.144"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "demo.virington.com"
    secretName: demo-tls
  rules:
  - host: "demo.virington.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo
            port:
              number: 80
